[package]
name = "tokio_scoket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
protobuf = "3.3.0"
protobuf-codegen = "3.3.0"
protoc-gen-prost = "0.3.1"
prost = "*"